Convert home page to Jade
Btw commit as I say and not as I do. There are also changes to the html to add a sticky header, but CSS not committed here so will produce odd results.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ducompsoc/website#readme",
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "pug": "^2.0.0-beta6"
   }
 }
