--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "compsoc-website",
   "version": "0.0.1",
   "description": "The Durham University Computing Society Website",
+  "private": true,
   "scripts": {
+    "prestart": "npm install",
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
