--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "font-awesome": "^4.6.3",
-    "pug": "^2.0.0-beta6"
+    "pug": "2.0.0-beta6"
   }
 }
