--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/ducompsoc/website#readme",
   "dependencies": {
+    "body-parser": "^1.18.1",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "font-awesome": "^4.6.3",
+    "nodemailer": "^4.1.0",
     "pug": "2.0.0-beta6"
   }
 }
