temp redirect, ready for the GM

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,11 @@
 	from = "/constitution"
 	to = "https://community.dur.ac.uk/computing.society/constitution.pdf"
 	status = 302
+	
+[[redirects]]
+	from = "/proposed_constitution"
+	to = "https://community.dur.ac.uk/computing.society/proposed_constitution.pdf"
+	status = 302
 
 [dev]
 	publish = "build/"
