--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"react-helmet": "^5.2.1",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "3.1.1",
-		"typescript": "3.5.3",
+		"typescript": "^4.8.4",
 		"wowjs": "^1.1.3"
 	},
 	"scripts": {
