add sponsorshipdeck, gdsc redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -29,6 +29,11 @@
 	status = 302
 
 [[redirects]]
+	from = "/sponsorshipdeck"
+	to = "https://drive.google.com/file/d/1NdSjyCv39hsFdOKcOkDXjyuYhInRmObn/view?usp=sharing"
+	status = 302
+
+[[redirects]]
 	from = "/nwg"
 	to = "https://drive.google.com/drive/folders/1KWkUfCxbWgsu8PAnPCfzoq4TwgCjXLUO?usp=share_link"
 	status = 302
@@ -36,6 +41,16 @@
 [[redirects]]
 	from = "/qrt"
 	to = "https://www.qube-rt.com/careers/"
+	status = 302
+
+[[redirects]]
+	from = "/qrt-tracks"
+	to = "https://durhamuniversity-my.sharepoint.com/:b:/g/personal/jgcw74_durham_ac_uk/Ea7o7fwdGeRMhzhpD5loae0B31gukeH_yQXbLK5ofOZQRQ?e=ByBcUf"
+	status = 302
+
+[[redirects]]
+	from = "/gdsc"
+	to = "https://drive.google.com/file/d/1mNmLYH3xW0QEe78oRgcZHi-Capg2LtKw/view?usp=sharing"
 	status = 302
 
 
