--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,17 +9,21 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x]
+        node-version: [20.x]
 
     steps:
     - uses: actions/checkout@v1
+    - name: Install pnpm
+      uses: pnpm/action-setup@v4
+      with:
+        version: 9
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install and build
       run: |
-        npm install
-        npm run build --if-present
+        pnpm install
+        pnpm run build
       env:
         CI: true
