--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
 		{
 			"name": "Ethan Waite",
 			"email": "ethan.w@compsoc.tech"
+		},
+		{
+			"name": "Jacob Wrenn",
+			"email": "jacob@wrenn.me"
 		}
 	],
+	"type": "module",
 	"private": true,
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^5.15.4",
@@ -16,28 +21,36 @@
 		"@fortawesome/free-brands-svg-icons": "^5.15.4",
 		"@fortawesome/free-regular-svg-icons": "^5.15.4",
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
-		"@fortawesome/react-fontawesome": "^0.1.15",
+		"@fortawesome/react-fontawesome": "^0.1.19",
 		"@typeform/embed": "^0.12.2",
 		"@types/jest": "24.0.18",
-		"@types/node": "12.7.2",
+		"@types/node": "20.0.0",
 		"@types/react": "16.9.2",
 		"@types/react-dom": "16.9.0",
-		"classnames": "^2.3.1",
+		"@vitejs/plugin-legacy": "^5.4.2",
+		"@vitejs/plugin-react-swc": "^3.7.0",
+		"classnames": "^2.5.1",
 		"react": "^16.14.0",
 		"react-dom": "^16.14.0",
 		"react-google-recaptcha": "^2.1.0",
 		"react-helmet": "^5.2.1",
-		"react-router-dom": "^5.3.0",
-		"react-scripts": "3.1.1",
-		"typescript": "^4.8.4",
-		"wowjs": "^1.1.3"
+		"react-router-dom": "^5.3.4",
+		"react-snap": "^1.23.0",
+		"sass-embedded": "^1.78.0",
+		"terser": "^5.32.0",
+		"typescript": "^5.0.0",
+		"vite": "^5.4.3",
+		"vite-plugin-svgr": "^4.2.0",
+		"vite-tsconfig-paths": "^5.0.1",
+		"wow.js": "^1.2.2"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"build:prod": "npm run build && react-snap",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"build:prod": "npm run build && react-snap"
+	},
+	"reactSnap": {
+		"source": "dist"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -57,9 +70,7 @@
 	"devDependencies": {
 		"@types/classnames": "^2.3.1",
 		"@types/react-google-recaptcha": "^1.1.2",
-		"@types/react-helmet": "^5.0.17",
-		"@types/react-router-dom": "^5.1.8",
-		"node-sass": "^4.14.1",
-		"react-snap": "^1.23.0"
+		"@types/react-helmet": "^5.0.27",
+		"@types/react-router-dom": "^5.3.3"
 	}
 }
