--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"build:prod": "npm run build"
+		"build:prod": "pnpm run build && react-snap"
 	},
 	"reactSnap": {
 		"source": "dist"
@@ -70,7 +70,8 @@
 		"@types/classnames": "^2.3.1",
 		"@types/react-google-recaptcha": "^1.1.2",
 		"@types/react-helmet": "^5.0.27",
-		"@types/react-router-dom": "^5.3.3"
+		"@types/react-router-dom": "^5.3.3",
+		"react-snap": "^1.23.0"
 	},
 	"packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
 }
