--- a/netlify.toml
+++ b/netlify.toml
@@ -54,7 +54,7 @@
 	status = 302
 
 [[redirects]]
-	from = "/balltickets"
+	from = "/tickets"
 	to = "https://www.durhamsu.com/groups/computing-766e/events"
 	status = 302
 
